Fixes 1. Corrección en buscar categorias por nombre 2.Vista del Formulario Principal 3.Corrección de los SubMenus en el Master

--- a/src/main/webapp/WEB-INF/templates/master.xhtml
+++ b/src/main/webapp/WEB-INF/templates/master.xhtml
@@ -13,9 +13,17 @@
 		<h:form>
 			<p:menubar autoDisplay="false">
 				<p:submenu label="Mantenedores" icon="ui-icon-pencil">
+					<p:menuitem icon="ui-icon-document" value="Proveedores"
+						url="/proveedor/lista.xhtml" />
 					<p:menuitem icon="ui-icon-document" value="Productos"
-						url="/index.xhtml" />
-				</p:submenu>
+						url="/producto/lista.xhtml" />
+					<p:menuitem icon="ui-icon-document" value="Categorias"
+						url="/categoria/lista.xhtml" />
+					<p:menuitem icon="ui-icon-document" value="Empleados"
+						url="/empleado/lista.xhtml" />
+					<p:menuitem icon="ui-icon-document" value="Pedidos"
+						url="/pedido/lista.xhtml" />								
+				</p:submenu>				
 			</p:menubar>
 		</h:form>
 	</ui:insert>
